--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,20 +1,23 @@
-
 # Windows automatically get named
 set-window-option -g automatic-rename
+
 # Color compatability
 set -g default-terminal "screen-256color"
 
 set -g status-keys vi
 set -g history-limit 10000
 
-setw -g mode-keys
+setw -g mode-keys vi
 setw -g mouse on
 setw -g monitor-activity on
 
 bind-key v split-window -h
 bind-key s split-window -v
 
+# Remap c-b to c-space
+unbind C-b
 set -g prefix M-a
+bind-key M-a send prefix
 
 # Pane resize bindings
 bind-key J resize-pane -D 5
@@ -32,10 +35,3 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-# Alt-vim keys without prefix switches panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
